--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "dependencies": {
     "@shoutem/ui": "shoutem/ui#develop",
     "firebase": "^3.5.2",
+    "geofire": "^4.1.2",
     "lodash": "^4.16.6",
+    "moment": "^2.17.1",
     "native-base": "^0.5.13",
     "react": "15.3.2",
     "react-native": "0.36.1",
+    "react-native-gifted-form": "0.0.13",
     "react-native-router-flux": "^3.35.0",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-form": "^6.3.2",
     "redux-thunk": "^2.1.0"
   },
   "jest": {
