--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "geofire": "^4.1.2",
     "lodash": "^4.16.6",
     "moment": "^2.17.1",
-    "native-base": "^0.5.13",
     "react": "15.3.2",
     "react-native": "0.36.1",
-    "react-native-gifted-form": "0.0.13",
+    "react-native-maps": "^0.12.2",
     "react-native-router-flux": "^3.35.0",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^4.4.5",
