--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.36.1",
     "react-native-maps": "^0.12.2",
     "react-native-router-flux": "^3.35.0",
+    "react-native-tabs": "^1.0.9",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
